[project]
name = "skyshadow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "earthengine-api>=1.7.10",
    "fastapi>=0.128.0",
    "geopandas>=1.1.2",
    "httpx>=0.28.1",
    "mercantile>=1.2.1",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.1",
    "rasterio>=1.5.0",
    "redis>=7.1.0",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.40.0",
]
